work2/webook-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-mysql-serive
spec:
  selector:
    app: webook-mysql
  ports:
  - port: 3308
    targetPort: 3306
  type: LoadBalancer
