work2/webook-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-redis
spec:
  selector:
    app: webook-redis
  ports:
  - port: 6380
    nodePort: 31379
    targetPort: 6379
  type: NodePort
