work2/webook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-service
spec:
  type: ClusterIP
  selector:
    app: webook-service
  ports:
  - port: 18080
    targetPort: 8081
